--- a/settings.html
+++ b/settings.html
@@ -235,12 +235,13 @@
             <div class="row">
               <div class="col-6">
                 <div class="d-flex">
-                  <img
-                    src="Netflix-assets/assets/avatar2.png"
-                    alt=""
-                    width="30px"
-                    height="30px"
-                  />
+                  <a href="profile.html"
+                    ><img
+                      src="Netflix-assets/assets/avatar.png"
+                      alt=""
+                      width="30px"
+                      height="30px"
+                  /></a>
                   <p class="ps-3"><strong>Strive Student</strong></p>
                 </div>
                 <ul class="list-unstyled text-start">
