--- a/profile.html
+++ b/profile.html
@@ -32,7 +32,7 @@
           <div class="row mt-4">
             <div class="col p-0 col-3 col-lg-2 col-md-2">
               <img
-                src="Netflix-assets/assets/avatar2.png"
+                src="Netflix-assets/assets/avatar.png"
                 alt=""
                 class="w-100"
               />
@@ -123,7 +123,7 @@
           </div>
           <hr class="text-white" />
           <div class="row d-flex justify-content-center align-items-center">
-            <div class="col-2 p-0">
+            <div class="col col-lg-2 p-0">
               <button
                 id="btn1"
                 type="button"
@@ -132,7 +132,7 @@
                 SAVE
               </button>
             </div>
-            <div class="col-2 p-0">
+            <div class="col col-lg-2 p-0">
               <button
                 id="btn2"
                 type="button"
@@ -141,7 +141,7 @@
                 CANCEL
               </button>
             </div>
-            <div class="col-4 p-0">
+            <div class="col col-lg-4 p-0">
               <button
                 id="btn3"
                 type="button"
