--- a/profile.html
+++ b/profile.html
@@ -91,7 +91,7 @@
                 <h5 class="text-white-50 m-0 mb-1">Autoplat controls</h5>
                 <div class="form-check">
                   <input
-                    class="form-check-input bg-black rounded-0"
+                    class="form-check-input bg-black rounded-0 p-2"
                     type="checkbox"
                     value=""
                     id="flexCheckDefault"
@@ -105,7 +105,7 @@
                 </div>
                 <div class="form-check">
                   <input
-                    class="form-check-input bg-black rounded-0"
+                    class="form-check-input bg-black rounded-0 p-2"
                     type="checkbox"
                     value=""
                     id="flexCheckChecked"
